grid gap issue fixed

--- a/components/NewsGrid/Cards/Cards.module.scss
+++ b/components/NewsGrid/Cards/Cards.module.scss
@@ -1,6 +1,8 @@
+.cards {
+  margin-top: 3rem;
+}
 .grid {
   padding: 0;
-  margin-top: 3rem;
   .col {
     display: flex;
     margin-bottom: 1.5rem;
